# RustyOGE

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml  README.md
cli/src/: cli_wrapers.rs  errors.rs  input.rs  input_utils.rs  macros.rs  main.rs  utils.rs
cli/src/cli_wrapers/: module1.rs  module10.rs  module12.rs  module2.rs  module3.rs  module4.rs  module5.rs  module6.rs  module7.rs  module9.rs
cli/src/input/: input_utils.rs  module1.rs  module10.rs  module12.rs  module2.rs  module6.rs
src/: errors.rs  input.rs  lib.rs  main.rs  tasks.rs  utils.rs
src/modules/: mod.rs  utils.rs
src/modules/module1/: core.rs  mod.rs  types.rs
src/modules/module10/: core.rs  mod.rs  number.rs  types.rs
src/modules/module12/: core.rs  mod.rs  types.rs
src/modules/module2/: README.md  core.rs  mod.rs  solvers.rs  types.rs
src/modules/module3/: core.rs  grammar.pest  mod.rs  types.rs
src/modules/module4/: mod.rs  types.rs
src/modules/module5/: core.rs  mod.rs  types.rs
src/modules/module6/: README.md  consts.rs  core.rs  mod.rs  solvers.rs  types.rs
src/modules/module7/: mod.rs  types.rs
src/modules/module9/: mod.rs  types.rs
src/tasks/: mod.rs  task2.rs  utils.rs
src/tasks/task2/: README.md  core.rs  mod.rs  solvers.rs  types.rs
src/tasks/task6/: README.md  core.rs  mod.rs  solvers.rs  types.rs
src/utils/: data_size.rs  graph.rs
tests/: download_test_files.py  module10_tests.rs  module12_tests.rs  module1_tests.rs  module2_tests.rs  module3_tests.rs  module4_tests.rs  module5_tests.rs  module6_tests.rs  module7_tests.rs  module9_tests.rs  task2_tests.rs  task6_tests.rs  test_macros.rs
tests/module6_files/: 10458.py  10459.py  10461.py  10462.py  10463.py  10465.py  10890.py  10892.py  10955.py  18215.py
tests/task6_files/: 10460.py  10464.py  10467.py  10468.py  10469.py  10471.py  10472.py  10888.py  10891.py  10950.py  10953.py  12855.py  16014.py  18174.py  18189.py  18245.py  18260.py  18275.py  18290.py
