[package]
name = "rusty_oge"
description = "Библиотека, решающая задачки из ОГЭ по информатике."
version = "1.1.0"
authors = ["DarkSeriusCode"]
edition = "2021"
license = "MIT"
repository = "https://github.com/DarkSeriusCode/RustyOGE"
readme = "README.md"

[dependencies]
regex = "1.7.1"

[workspace]
members = [
    "cli"
]

