[package]
name = "rusty_oge"
description = "Библиотека, решающая задачки из ОГЭ по информатике."
version = "1.3.0"
authors = ["DarkSeriusCode"]
edition = "2021"
license = "MIT"
repository = "https://github.com/DarkSeriusCode/RustyOGE"
readme = "README.md"

[dependencies]
regex = "1.10.3"
unrar = "0.5.1"
pest = "2.7.7"
pest_derive = "2.7.7"

[workspace]
members = [
    "cli"
]

